--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/jjackson17mv/bamazon/issues"
   },
-  "homepage": "https://github.com/jjackson17mv/bamazon#readme"
+  "homepage": "https://github.com/jjackson17mv/bamazon#readme",
+  "dependencies": {
+    "inquirer": "^6.4.1",
+    "mysql": "^2.17.1"
+  }
 }
